# smart-contracts

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md
programs/nullifier/: Cargo.toml
programs/nullifier/src/: groth16.rs  groth16_test.rs  lib.rs  lib_test.rs  merkle.rs  merkle_poseidon.rs  merkle_poseidon_test.rs  merkle_test.rs
